[package]
name = "gadu"
version = "0.1.3"
authors = ["Rohit Joshi <rohit.c.joshi@gmail.com>"]
edition = "2018"
description = "Async Networking library using MIO supports TCP, TLS and Unix Domain Socket"
keywords=["networking", "mio", "tcp", "uds", "tls"]
License="Apache 2.0"
license-file="LICENSE"
publish = true

[badges]
travis-ci = { repository = "https://github.com/rohitjoshi/gadu", branch = "master" }
codecov = { repository = "https://github.com/rohitjoshi/gadu", branch = "master", service = "github" }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = false


[dependencies]
log = { version = "0.4.20", features = ["max_level_trace", "release_max_level_info"] }
url= "2.4.1"
#futures = "0.1.23"
mio = "0.6.16"
mio-uds = "0.6"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json="1.0.37"
crossbeam-channel = "0.5.8"
crossbeam = "0.8.2"
hashbrown = "0.14.1"
parking_lot = "0.12.1"
openssl="0.10.20"






